# bugX

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  LICENSE  README.md  claude_code_gpt56_upgrade_sessions.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: sentinel-bisect.yml
fixtures/: build_fixture.py  build_hard_fixture.py  demo-report.md  demo-trace.json
scripts/: post_pr_comment.py
sentinel_bisect/: __init__.py  cli.py
sentinel_bisect/analysis/: __init__.py  costs.py  escalation.py  mock.py  service.py
sentinel_bisect/intake/: __init__.py  service.py
sentinel_bisect/orchestrator/: __init__.py  engine.py  git.py  metrics.py  models.py  runner.py
sentinel_bisect/report/: __init__.py  renderer.py  server.py  timeline.py
sentinel_bisect/verify/: __init__.py  service.py
tests/: test_analysis.py  test_engine.py  test_escalation.py  test_hard_regression_invariant.py  test_intake.py  test_mock_analysis.py  test_post_pr_comment.py  test_report.py  test_reporting_metrics.py  test_runner.py  test_server.py  test_verify.py
