[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-bisect"
version = "0.1.0"
description = "Flaky-test-aware regression finder"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["click>=8.1", "openai>=1.0", "python-dotenv>=1.0", "fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
sentinel-bisect = "sentinel_bisect.cli:main"

[tool.setuptools.packages.find]
include = ["sentinel_bisect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
